
package inventory.model;



public class OutsourcedPart extends Part {

    // Declare fields
    private String companyName;

    // Constructor
    public OutsourcedPart(int partId, String name, double price, int stockCount, int minCapacity, int maxCapacity, String companyName) {
        super(partId, name, price, stockCount, minCapacity, maxCapacity);
        this.companyName = companyName;
    }
    
    // Getter
    public String getCompanyName() {
        return companyName;
    }
    
    // Setter
    public void setCompanyName(String companyName) {
        this.companyName = companyName;
    }

    @Override
    public String toString() {
        return "O,"+super.toString()+","+getCompanyName();
    }

}
